<resources>
    <string name="app_name">SAAlarm</string>
    <string name="facebook_app_id">539230336614526</string>
    <string name="fb_login_protocol_scheme">fb539230336614526</string>
    <string name="register">register</string>
    <string name="login">login</string>

    <string name="reminder_title">AlarmReminder</string>
    <string name="action_notify_alarm">com.sa.intent.alarm</string>
    <string name="email">Email</string>



    <string name="no_cardetails">Click on the button below to begin creating your reminder!</string>
    <string name="title_activity_add_reminder">Add Reminder</string>
    <string name="title_activity_edit_reminder">Edit Reminder</string>
    <string name="title_activity_licenses">Licenses</string>

    <string name="add_reminder">Reminder</string>
    <string name="details">Details</string>
    <string name="date">Date</string>
    <string name="time">Time</string>
    <string name="repeat">Repeat</string>
    <string name="repeat_off">Off</string>
    <string name="repeat_no">Repetition Interval </string>
    <string name="repeat_type">Type of Repetitions</string>

    <string name="action_discard_reminder">Discard Reminder</string>
    <string name="action_save_reminder">Save Reminder</string>

    <string name="editor_activity_title_new_reminder">Add Reminder Details</string>
    <string name="editor_activity_title_edit_reminder">Edit Reminder</string>
    <string name="unsaved_changes_dialog_msg">Discard your changes and quit editing?</string>
    <string name="discard">Discard</string>

    <string name="keep_editing">Keep Editing</string>
    <string name="delete_dialog_msg">Delete this Reminder?</string>

    <string name="delete">Delete</string>

    <string name="cancel">Cancel</string>
    <string name="editor_delete_reminder_successful">Reminder deleted</string>

    <string name="editor_delete_reminder_failed">Error with deleting reminder</string>

    <string name="editor_insert_reminder_successful">Reminder saved</string>

    <string name="editor_insert_reminder_failed">Error with saving reminder</string>

    <string name="editor_update_reminder_successful">Reminder updated</string>

    <string name="editor_update_reminder_failed">Error with updating reminder</string>
    <string name="password">Password</string>
    <string name="login_with_fb">Login with Facebook</string>
    <string name="user">User</string>
    <string name="register_with_fb">Register with Facebook</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="name">Name</string>
    <string name="action_profile">Profile</string>
    <string name="action_setting">Setting</string>
    <string name="action_logout">Log out</string>
    <string name="submit">submit</string>
    <string name="send_password">Send Password</string>
    <string name="error_password_invalid">Minimum length should be 8</string>
    <string name="error_password_empty">Please Enter Email</string>
    <string name="error_email_invalid">Invalid Email</string>
    <string name="error_email_empty">Please Enter Email</string>
    <string name="forgot_password_title">Forgot Password</string>
    <string name="password_reset_successful">Password sent to registered email</string>
    <string name="error_name_empty">Please Enter name</string>
    <string name="erro_reminder_empty">Enter reminder title</string>
    <string name="error_time_empty">Select time</string>


</resources>
