<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
                                                   xmlns:app="http://schemas.android.com/apk/res-auto"
                                                   android:orientation="vertical"
                                                   android:layout_width="match_parent"
                                                   android:padding="@dimen/_15sdp"
                                                   android:layout_height="wrap_content">

    <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:hint="@string/email"
            app:errorEnabled="true"
            android:textColorHint="@color/colorGrey"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:id="@+id/textInputLayout" app:layout_constraintTop_toBottomOf="@+id/tvForgotPass"
            android:layout_marginTop="8dp">
        <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textStyle="bold"
                android:textSize="16sp"
                android:drawableStart="@drawable/icon_email"
                android:drawablePadding="@dimen/_10sdp"
                android:id="@+id/etMail"/>
    </com.google.android.material.textfield.TextInputLayout>


    <Button
            android:text="@string/send_password"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/btnForgotPassword"
            android:background="@drawable/shape_login"
            android:paddingStart="50dp"
            android:paddingEnd="50dp"
            android:textColor="@color/colorWhite"
            android:textSize="16sp"
            android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/textInputLayout"
            android:layout_marginStart="8dp"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginEnd="8dp"
            app:layout_constraintEnd_toEndOf="parent"/>
    <TextView
            android:text="@string/forgot_password_title"
            android:textStyle="bold"
            android:textSize="20sp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/tvForgotPass" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp" app:layout_constraintTop_toTopOf="parent"/>


</androidx.constraintlayout.widget.ConstraintLayout>