<?xml version="1.0" encoding="utf-8"?>

<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:background="@color/colorDarkBlue"
        android:layout_height="match_parent">

    <androidx.constraintlayout.widget.Guideline
            android:orientation="horizontal"
            android:layout_width="wrap_content"
            app:layout_constraintGuide_percent="0.65"
            android:layout_height="wrap_content" android:id="@+id/guideline2"/>
    <androidx.cardview.widget.CardView
            android:layout_width="0dp"
            android:layout_height="0dp" app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintWidth_percent=".85"
            app:cardBackgroundColor="@color/colorWhite"
            app:cardCornerRadius="15dp"
            app:layout_constraintBottom_toTopOf="@+id/guideline2" android:id="@+id/cardView">

        <LinearLayout android:layout_width="match_parent" android:layout_height="wrap_content"
                      android:orientation="vertical"
                      android:padding="15dp"
        >

            <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:hint="@string/email"
                    app:errorEnabled="true"
                    android:textColorHint="@color/colorGrey"
                    android:layout_height="wrap_content"
            >
                <com.google.android.material.textfield.TextInputEditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textStyle="bold"
                        android:textSize="16sp"
                        android:drawableStart="@drawable/icon_email"
                        android:padding="@dimen/_15sdp"
                        android:drawablePadding="@dimen/_10sdp"
                        android:id="@+id/etEmail"/>
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    app:counterEnabled="true"
                    android:hint="@string/password"
                    app:errorEnabled="true"
                    app:passwordToggleEnabled="true"
                    app:passwordToggleTint="@color/colorGreen"
                    app:counterMaxLength="8"
                    android:textColorHint="@color/colorGrey"
                    android:layout_height="wrap_content"
                    android:id="@+id/textinput_layout">
                <com.google.android.material.textfield.TextInputEditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textStyle="bold"
                        android:textSize="16sp"
                        android:password="true"
                        android:drawablePadding="@dimen/_10sdp"
                        android:drawableStart="@drawable/icon_lock"
                        android:padding="@dimen/_15sdp"
                        android:id="@+id/etPassword"/>
            </com.google.android.material.textfield.TextInputLayout>


            <TextView android:layout_width="wrap_content" android:layout_height="wrap_content"
                      android:id="@+id/txtForgotPassword"
                      android:text="@string/forgot_password"
                      android:textAllCaps="true"
                      android:layout_marginTop="5dp"
                      android:textColor="@color/colorGreen"
                      android:layout_marginStart="@dimen/_37sdp"
            />


        </LinearLayout>

    </androidx.cardview.widget.CardView>
    <Button
            android:text="@string/login"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/btnRegister"
            android:background="@drawable/shape_login"
            app:layout_constraintEnd_toEndOf="parent"
            android:paddingStart="50dp"
            android:paddingEnd="50dp"
            android:textColor="@color/colorWhite"
            android:textSize="16sp"
            app:layout_constraintStart_toStartOf="parent" app:layout_constraintBottom_toTopOf="@+id/guideline2"
            app:layout_constraintTop_toTopOf="@+id/guideline2"/>

    <androidx.appcompat.widget.AppCompatButton
            android:text="@string/login_with_fb"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/btnFbLogin"
            app:layout_constraintTop_toBottomOf="@+id/btnRegister" app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:drawableStart="@drawable/icon_fb"
            android:drawablePadding="10dp"
            android:background="@drawable/shape_button_dashed"
            android:textColor="@color/colorWhite"
            app:layout_constraintBottom_toTopOf="@+id/guideline4"/>
    <androidx.constraintlayout.widget.Guideline
            android:orientation="horizontal"
            android:layout_width="wrap_content"
            app:layout_constraintGuide_percent="1"
            android:layout_height="wrap_content" android:id="@+id/guideline4"/>

    <ProgressBar
            style="?android:attr/progressBarStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:elevation="2dp"
            android:id="@+id/pgbLogin"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:visibility="gone"/>
</androidx.constraintlayout.widget.ConstraintLayout>