<?xml version="1.0" encoding="utf-8"?>

<ScrollView
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools" android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true">

    <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
        <include layout="@layout/toolbar_main"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintEnd_toEndOf="parent" android:id="@+id/toolbar"
                 app:layout_constraintTop_toTopOf="parent"/>

        <RelativeLayout android:layout_width="0dp" android:layout_height="300dp"
                        android:background="@color/colorDarkBlue"
                        app:layout_constraintStart_toStartOf="parent" app:layout_constraintEnd_toEndOf="parent"

                        android:id="@+id/view" app:layout_constraintHorizontal_bias="0.6"
                        app:layout_constraintTop_toTopOf="parent"/>

        <androidx.constraintlayout.widget.Guideline
                android:orientation="horizontal"
                app:layout_constraintGuide_percent="0.35"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:id="@+id/guideline" app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"/>

        <de.hdodenhof.circleimageview.CircleImageView android:layout_width="120dp"
                                                      android:layout_height="120dp"
                                                      android:src="@drawable/ic_launcher_background"
                                                      app:civ_border_width="5dp"
                                                      app:civ_border_color="#205679F7"
                                                      android:id="@+id/civProfile"
                                                      app:layout_constraintStart_toStartOf="parent"
                                                      app:layout_constraintEnd_toEndOf="parent"
                                                      app:layout_constraintTop_toBottomOf="@+id/toolbar"
                                                      android:layout_marginTop="8dp"/>

        <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/ivCamera"
                app:layout_constraintEnd_toEndOf="@+id/civProfile"
                android:layout_marginEnd="8dp"
                app:layout_constraintBottom_toBottomOf="@+id/civProfile"

        >
            <ImageView android:layout_width="40dp"
                       android:layout_height="40dp"
                       android:src="@drawable/shape_circleview"

            />
            <ImageView android:layout_width="24dp"
                       android:layout_height="24dp"
                       android:src="@drawable/icon_email"
                       android:id="@+id/camera"
                       android:layout_centerInParent="true"
            />


        </RelativeLayout>

        <TextView
                android:text="Name"
                android:textColor="@color/colorWhite"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" android:id="@+id/tvName"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/civProfile"
                android:layout_marginTop="24dp"/>

        <androidx.cardview.widget.CardView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                app:layout_constraintWidth_percent=".85"
                app:cardBackgroundColor="@color/colorWhite"
                app:cardCornerRadius="15dp"
                android:id="@+id/cardView"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginTop="32dp" app:layout_constraintTop_toBottomOf="@+id/tvName">

            <LinearLayout android:layout_width="match_parent" android:layout_height="wrap_content"
                          android:orientation="vertical"
                          android:padding="15dp"
                          android:layout_marginBottom="@dimen/_30sdp"
            >

                <com.google.android.material.textfield.TextInputLayout
                        android:layout_width="match_parent"
                        android:hint="@string/email"
                        app:errorEnabled="true"
                        android:textColorHint="@color/colorGrey"
                        android:layout_height="wrap_content"
                >
                    <com.google.android.material.textfield.TextInputEditText
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:textStyle="bold"
                            android:enabled="false"
                            android:textSize="16sp"
                            android:drawableStart="@drawable/icon_email"
                            android:padding="@dimen/_15sdp"
                            android:drawablePadding="@dimen/_10sdp"
                            android:id="@+id/etEmail"/>
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                        android:layout_width="match_parent"
                        android:hint="@string/name"
                        android:textColorHint="@color/colorGrey"
                        android:layout_height="wrap_content"
                        android:id="@+id/textinput_layout">
                    <com.google.android.material.textfield.TextInputEditText
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:textStyle="bold"
                            android:textSize="16sp"
                            android:drawablePadding="@dimen/_10sdp"
                            android:drawableStart="@drawable/icon_user"
                            android:padding="@dimen/_15sdp"
                            android:id="@+id/etName"/>
                </com.google.android.material.textfield.TextInputLayout>

                <TextView android:layout_width="wrap_content" android:layout_height="wrap_content"
                          android:id="@+id/txtChangePassword"
                          android:text="@string/change_password"
                          android:textAllCaps="true"
                          android:visibility="gone"
                          android:layout_marginTop="5dp"
                          android:textColor="@color/colorGreen"
                          android:layout_marginStart="@dimen/_37sdp"
                />

            </LinearLayout>

        </androidx.cardview.widget.CardView>

        <Button
                android:elevation="2dp"
                android:text="@string/submit"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" android:id="@+id/btnSubmitPofile"
                android:background="@drawable/shape_login"
                android:paddingStart="50dp"
                android:paddingEnd="50dp"
                android:textColor="@color/colorWhite"
                android:textSize="16sp"
                android:layout_marginStart="8dp"
                app:layout_constraintStart_toStartOf="parent" android:layout_marginEnd="8dp"
                app:layout_constraintEnd_toEndOf="parent" android:layout_marginBottom="8dp"
                app:layout_constraintBottom_toBottomOf="@+id/cardView"
                app:layout_constraintTop_toBottomOf="@+id/cardView"/>
        <ProgressBar
                style="?android:attr/progressBarStyle"
                android:layout_width="wrap_content"
                android:visibility="gone"
                android:elevation="3dp"
                android:layout_height="wrap_content"
                android:id="@+id/pgbProfile"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintBottom_toBottomOf="parent" android:layout_marginTop="8dp"
                app:layout_constraintTop_toBottomOf="@+id/toolbar"/>


    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>